--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "nodemon server.js",
+    "start:prod": "cross-env NODE_ENV=production node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,10 +14,13 @@
     "@types/node": "^20.9.1",
     "body-parser": "^1.20.2",
     "chai": "^5.0.3",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mocha": "^10.2.0",
     "mongoose": "^8.1.1",
+    "morgan": "^1.10.0",
     "node-fetch": "^3.3.2"
   }
 }
