--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
-  "name": "fixerapi",
+  "name": "nodejs-ecom-api-v1",
   "version": "1.0.0",
   "description": "",
-  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon server.js",
     "start:prod": "cross-env NODE_ENV=production node server.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^20.9.1",
-    "body-parser": "^1.20.2",
-    "chai": "^5.0.3",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "jsonwebtoken": "^9.0.2",
-    "mocha": "^10.2.0",
+    "express-validator": "^7.0.1",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
-    "node-fetch": "^3.3.2"
+    "slugify": "^1.6.6"
+  },
+  "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.33.2",
+    "nodemon": "^3.0.3",
+    "prettier": "^3.2.5"
   }
 }
