--- a/package.json
+++ b/package.json
@@ -1,34 +1,194 @@
 {
-  "name": "nodejs-ecom-api-v1",
+  "name": "fixer_backend-main",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
+  "dependencies": {
+    "accepts": "^1.3.8",
+    "ansi-colors": "^4.1.3",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.3",
+    "argparse": "^2.0.1",
+    "array-flatten": "^1.1.1",
+    "assertion-error": "^2.0.1",
+    "balanced-match": "^1.0.2",
+    "basic-auth": "^2.0.1",
+    "binary-extensions": "^2.2.0",
+    "body-parser": "^1.20.2",
+    "brace-expansion": "^2.0.1",
+    "braces": "^3.0.2",
+    "browser-stdout": "^1.3.1",
+    "bson": "^6.4.0",
+    "buffer-equal-constant-time": "^1.0.1",
+    "bytes": "^3.1.2",
+    "call-bind": "^1.0.7",
+    "camelcase": "^6.3.0",
+    "chai": "^5.1.0",
+    "chalk": "^4.1.2",
+    "check-error": "^2.0.0",
+    "chokidar": "^3.5.3",
+    "cliui": "^7.0.4",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.5",
+    "cookie": "^0.5.0",
+    "cookie-signature": "^1.0.6",
+    "data-uri-to-buffer": "^4.0.1",
+    "debug": "^2.6.9",
+    "decamelize": "^4.0.0",
+    "deep-eql": "^5.0.1",
+    "define-data-property": "^1.1.4",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "diff": "^5.2.0",
+    "dotenv": "^16.4.5",
+    "ecdsa-sig-formatter": "^1.0.11",
+    "ee-first": "^1.1.1",
+    "emoji-regex": "^8.0.0",
+    "encodeurl": "^1.0.2",
+    "es-define-property": "^1.0.0",
+    "es-errors": "^1.3.0",
+    "escalade": "^3.1.2",
+    "escape-html": "^1.0.3",
+    "escape-string-regexp": "^4.0.0",
+    "etag": "^1.8.1",
+    "express": "^4.18.3",
+    "express-async-handler": "^1.2.0",
+    "fetch-blob": "^3.2.0",
+    "fill-range": "^7.0.1",
+    "finalhandler": "^1.2.0",
+    "find-up": "^5.0.0",
+    "flat": "^5.0.2",
+    "formdata-polyfill": "^4.0.10",
+    "forwarded": "^0.2.0",
+    "fresh": "^0.5.2",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.2",
+    "get-caller-file": "^2.0.5",
+    "get-func-name": "^2.0.2",
+    "get-intrinsic": "^1.2.4",
+    "glob": "^8.1.0",
+    "glob-parent": "^5.1.2",
+    "gopd": "^1.0.1",
+    "has-flag": "^4.0.0",
+    "has-property-descriptors": "^1.0.2",
+    "has-proto": "^1.0.3",
+    "has-symbols": "^1.0.3",
+    "hasown": "^2.0.1",
+    "he": "^1.2.0",
+    "http-errors": "^2.0.0",
+    "iconv-lite": "^0.4.24",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "ipaddr.js": "^1.9.1",
+    "is-binary-path": "^2.1.0",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "is-plain-obj": "^2.1.0",
+    "is-unicode-supported": "^0.1.0",
+    "js-yaml": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwa": "^1.4.1",
+    "jws": "^3.2.2",
+    "kareem": "^2.5.1",
+    "locate-path": "^6.0.0",
+    "lodash.includes": "^4.3.0",
+    "lodash.isboolean": "^3.0.3",
+    "lodash.isinteger": "^4.0.4",
+    "lodash.isnumber": "^3.0.3",
+    "lodash.isplainobject": "^4.0.6",
+    "lodash.isstring": "^4.0.1",
+    "lodash.once": "^4.1.1",
+    "log-symbols": "^4.1.0",
+    "loupe": "^3.1.0",
+    "lru-cache": "^6.0.0",
+    "media-typer": "^0.3.0",
+    "memory-pager": "^1.5.0",
+    "merge-descriptors": "^1.0.1",
+    "methods": "^1.1.2",
+    "mime": "^1.6.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "minimatch": "^5.1.6",
+    "mongodb": "^6.3.0",
+    "mongodb-connection-string-url": "^3.0.0",
+    "mongoose": "^8.2.1",
+    "morgan": "^1.10.0",
+    "mpath": "^0.9.0",
+    "mquery": "^5.0.0",
+    "ms": "^2.0.0",
+    "negotiator": "^0.6.3",
+    "node-domexception": "^1.0.0",
+    "node-fetch": "^3.3.2",
+    "normalize-path": "^3.0.0",
+    "object-inspect": "^1.13.1",
+    "on-finished": "^2.4.1",
+    "on-headers": "^1.0.2",
+    "once": "^1.4.0",
+    "p-limit": "^3.1.0",
+    "p-locate": "^5.0.0",
+    "parseurl": "^1.3.3",
+    "path-exists": "^4.0.0",
+    "path-to-regexp": "^0.1.7",
+    "pathval": "^2.0.0",
+    "picomatch": "^2.3.1",
+    "proxy-addr": "^2.0.7",
+    "punycode": "^2.3.1",
+    "qs": "^6.11.0",
+    "randombytes": "^2.1.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.2",
+    "readdirp": "^3.6.0",
+    "require-directory": "^2.1.1",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "semver": "^7.6.0",
+    "send": "^0.18.0",
+    "serialize-javascript": "^6.0.2",
+    "serve-static": "^1.15.0",
+    "set-function-length": "^1.2.1",
+    "setprototypeof": "^1.2.0",
+    "side-channel": "^1.0.6",
+    "sift": "^16.0.1",
+    "sparse-bitfield": "^3.0.3",
+    "statuses": "^2.0.1",
+    "string-width": "^4.2.3",
+    "strip-ansi": "^6.0.1",
+    "strip-json-comments": "^3.1.1",
+    "supports-color": "^8.1.1",
+    "to-regex-range": "^5.0.1",
+    "toidentifier": "^1.0.1",
+    "tr46": "^4.1.1",
+    "type-is": "^1.6.18",
+    "undici-types": "^5.28.3",
+    "unpipe": "^1.0.0",
+    "utils-merge": "^1.0.1",
+    "vary": "^1.1.2",
+    "web-streams-polyfill": "^3.3.3",
+    "webidl-conversions": "^7.0.0",
+    "whatwg-url": "^13.0.0",
+    "workerpool": "^6.5.1",
+    "wrap-ansi": "^7.0.0",
+    "wrappy": "^1.0.2",
+    "y18n": "^5.0.8",
+    "yallist": "^4.0.0",
+    "yargs": "^16.2.0",
+    "yargs-parser": "^20.2.9",
+    "yargs-unparser": "^2.0.0",
+    "yocto-queue": "^0.1.0"
+  },
+  "devDependencies": {
+    "mocha": "^10.3.0"
+  },
   "scripts": {
     "start:dev": "nodemon server.js",
     "start:prod": "cross-env NODE_ENV=production node server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "^16.4.1",
-    "express": "^4.18.2",
-    "express-async-handler": "^1.2.0",
-    "express-validator": "^7.0.1",
-    "mongoose": "^8.1.1",
-    "morgan": "^1.10.0",
-    "slugify": "^1.6.6"
-  },
-  "devDependencies": {
-    "eslint": "^8.56.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.33.2",
-    "nodemon": "^3.0.3",
-    "prettier": "^3.2.5"
-  }
+  "license": "ISC"
 }
