--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "assertion-error": "^2.0.1",
     "balanced-match": "^1.0.2",
     "basic-auth": "^2.0.1",
+    "bcryptjs": "^2.4.3",
     "binary-extensions": "^2.2.0",
     "body-parser": "^1.20.2",
     "brace-expansion": "^2.0.1",
@@ -35,6 +36,7 @@
     "content-type": "^1.0.5",
     "cookie": "^0.5.0",
     "cookie-signature": "^1.0.6",
+    "crypto": "^1.0.1",
     "data-uri-to-buffer": "^4.0.1",
     "debug": "^2.6.9",
     "decamelize": "^4.0.0",
@@ -56,6 +58,7 @@
     "etag": "^1.8.1",
     "express": "^4.18.3",
     "express-async-handler": "^1.2.0",
+    "express-validator": "^7.0.1",
     "fetch-blob": "^3.2.0",
     "fill-range": "^7.0.1",
     "finalhandler": "^1.2.0",
@@ -121,9 +124,11 @@
     "mpath": "^0.9.0",
     "mquery": "^5.0.0",
     "ms": "^2.0.0",
+    "multer": "^1.4.5-lts.1",
     "negotiator": "^0.6.3",
     "node-domexception": "^1.0.0",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.12",
     "normalize-path": "^3.0.0",
     "object-inspect": "^1.13.1",
     "on-finished": "^2.4.1",
@@ -152,8 +157,10 @@
     "serve-static": "^1.15.0",
     "set-function-length": "^1.2.1",
     "setprototypeof": "^1.2.0",
+    "sharp": "^0.33.2",
     "side-channel": "^1.0.6",
     "sift": "^16.0.1",
+    "slugify": "^1.6.6",
     "sparse-bitfield": "^3.0.3",
     "statuses": "^2.0.1",
     "string-width": "^4.2.3",
@@ -167,6 +174,8 @@
     "undici-types": "^5.28.3",
     "unpipe": "^1.0.0",
     "utils-merge": "^1.0.1",
+    "uuid": "^9.0.1",
+    "v": "^0.3.0",
     "vary": "^1.1.2",
     "web-streams-polyfill": "^3.3.3",
     "webidl-conversions": "^7.0.0",
