--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
     "minimatch": "^5.1.6",
+    "moment": "^2.30.1",
     "mongodb": "^6.3.0",
     "mongodb-connection-string-url": "^3.0.0",
     "mongoose": "^8.2.1",
