--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "ms": "^2.0.0",
     "multer": "^1.4.5-lts.1",
     "negotiator": "^0.6.3",
+    "node-cron": "^3.0.3",
     "node-domexception": "^1.0.0",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.12",
