keep server awake

--- a/config.env
+++ b/config.env
@@ -14,3 +14,5 @@ EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=465 
 EMAIL_USER=f1211bdde33e58
 EMAIL_PASSWORD=fb8e73c40b4050
+
+BASE_URL=https://fixer-backend-rtw4.onrender.com
